syntax = "proto3";

package common.interop_payload;

option go_package = "/common";

message InteropPayload {
  bytes payload = 1;
  string address = 2;
}
